--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,17 +1,16 @@
 body {
-    background: black;
-    
-    
+    background-color: black;
     color: blanchedalmond;
     font-family: 'Cormorant Garamond', serif;
-  
+    
+    
 }
 
-/* blockquote {
+blockquote {
     position: absolute;
     margin:25% 10% 20% 65%; 
 
-} */
+}
 
 cite {
     color: blanchedalmond;
@@ -19,30 +18,21 @@ cite {
     
 }
 
-.aboutSection h1{
-   
-    padding: 20px 130px;
-    text-align: center;
-}
-
-
 .fab .fas  {
     color: blanchedalmond;
-    
     padding: 15px;
 }
 .icon:hover{
-   color: grey;
+    color:grey;
 }
-
 footer {
     text-align: center;
     padding: 10px;
-    background:linear-gradient( black,#373640,#63686e);
+      background:linear-gradient( black,#373640,#63686e);
 }
 
 .dropdown-menu {
-    background-color: transparent;
+    background-color: black;
     
 }
 
@@ -71,11 +61,27 @@ font-size: 2rem;
     padding-right: 50px;
 }
 
-
-p{
-    font-size:19px;
+#aboutus{
+    position: relative;
+    font-size:18px;
     text-align: justify;
-    padding: 5% 10%;
+    padding: 7% 20%;
+}
+#gibsy2{
+    float: right;
+}
+#gibsy4{
+    float:left;
 }
 
+.text-with-image {
+    float: left;
+    text-align: justify;
+}
 
+.text-with-image img {
+    padding: 15px;
+}
+h1, h2{
+    text-align: center;
+}
