--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,16 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gibsy</title>
+    <title>Teatro delle Stanze</title>
+
     <!-- Css Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico">
 
     <!-- Remember!!! the style that is applied is the one that appears LAST -->
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap"
@@ -32,34 +33,8 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
+
+
 </head>
 
 <body>
-    <h1>
-        Gibsy
-    </h1>
-    <h2>di Francesco Mattonai</h2>
-    <h3>regia di Francesco Mattonai</h3>
-    <p>
-        Johann Trollmann è stato uno dei più promettenti pugili della Germania di fine anni ’20, destinato a dominare la
-        categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni in cui Hitler saliva al potere.
-        Trollmann
-        era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva l’ostilità dei nazisti che numerosissimi
-        andavano ai
-        sui incontri sperando di vederlo perdere.
-        Avvia il racconto Zirzow, l’allenatore di Gibsy che lo ha seguito per tutta la carriera da professionista ma, a
-        forza di
-        evocarlo, egli appare sul palco e comincia a raccontare la sua parte di storia; si alternano scene a due a
-        racconti
-        individuali, si intrecciano ai balli e canti del campo Rom. Zirzow va a trovare i parenti di Gibsy nel giorno in
-        cui si
-        celebra il funerale simbolico del pugile, scomparso in un campo di concentramento. Tra usanze sinti, racconti,
-        aneddoti
-        e testimonianze di chi Gibsy lo ha amato, come Olga, scopriremo qual è l’ultima beffa che il grande campione ha
-        escogitato, prima del suo declino.
-
-    </p>
-    <script src="index.js"></script>
-</body>
-
-</html>
