--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -10,14 +10,14 @@
                 alt="logo">
             Teatro delle Stanze
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                    <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Chi siamo
                     </a>
@@ -30,7 +30,7 @@
 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+                    <a class="nav-link" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Spettacoli
                     </a>
