make gibsy page with rows and columns

--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -4,29 +4,10 @@
     <%-include("scripts") -%>
         <%-include("navbar") -%>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="images/gibsyMirko.jpg" alt="First slide">
-                        <!-- <div class="carousel-text">
-                            <p>
-                                Avvia il racconto Zirzow, l’allenatore di Gibsy che lo ha seguito per
-                                tutta la carriera da professionista ma, a forza di evocarlo, egli appare sul palco e
-                                comincia a
-                                raccontare la sua parte di storia;
-                                si alternano scene a due a racconti individuali, si intrecciano ai balli e canti del
-                                campo
-                                Rom.
-                                Zirzow va a trovare i parenti di Gibsy
-                                nel giorno in cui si celebra il funerale simbolico del pugile, scomparso in un campo di
-                                concentramento. Tra usanze sinti,racconti, aneddoti
-                                e testimonianze di chi Gibsy lo ha amato, come Olga, scopriremo qual è l’ultima beffa
-                                che il
-                                grande
-                                campione ha escogitato, prima del suo declino.
-                            </p> -->
-
-                        <!-- </div> -->
 
                     </div>
                     <div class="carousel-item">
