--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,30 +6,8 @@ body {
     
 }
 
-blockquote {
-    position: absolute;
-    margin:25% 10% 20% 65%; 
 
-}
-
-cite {
-    color: blanchedalmond;
-    
-    
-}
-
-.fab .fas  {
-    color: blanchedalmond;
-    padding: 15px;
-}
-.icon:hover{
-    color:grey;
-}
-footer {
-    text-align: center;
-    padding: 10px;
-      background:linear-gradient( black,#373640,#63686e);
-}
+/* Navbar Section */
 
 .dropdown-menu {
     background-color: black;
@@ -58,30 +36,49 @@ font-size: 2rem;
 }
 
 .navbar{
-    padding-right: 50px;
+    padding-right: 20px;
 }
+
+/* About Us Section  */
 
 #aboutus{
     position: relative;
-    font-size:18px;
+    font-size:1rem;
     text-align: justify;
     padding: 7% 20%;
 }
+
+/* Gibsy Section */
+
+
+
+#gibsypugni{
+  
+    width: 70%;
+    padding-left: 20%;
+}
 #gibsy2{
-    float: right;
-}
-#gibsy4{
-    float:left;
+    
+    width: 70%;
 }
 
-.text-with-image {
-    float: left;
-    text-align: justify;
+
+
+h1, h2, h3{
+    text-align: center;
 }
 
-.text-with-image img {
+
+/* Footer */
+.fab .fas  {
+    color: blanchedalmond;
     padding: 15px;
 }
-h1, h2{
+.icon:hover{
+    color:grey;
+}
+footer {
     text-align: center;
+    padding: 10px;
+      background:linear-gradient( black,#373640,#63686e);
 }
