--- a/views/gibsy.ejs
+++ b/views/gibsy.ejs
@@ -3,43 +3,92 @@
         <%-include("navbar") -%>
 
             <div class="container-fluid">
-                <h1>
-                    Gibsy <h3>
-                        testo e regia di Francesco Mattonai
-                    </h3>
 
-                </h1>
+                <div class="row">
 
+                    <div class="col-sm">
+                        <div>
+                            <h1><em>Gibsy</em>
+                            </h1>
+                            <h3>
+                                testo e regia di Francesco Mattonai
+                            </h3>
+                        </div>
+                        <p>
+                            Johann Trollmann è stato uno dei più promettenti pugili della Germania di fine anni ’20,
+                            destinato a
+                            dominare la categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni in
+                            cui
+                            Hitler saliva al
+                            potere. Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
+                            l’ostilità
+                            dei
+                            nazisti che
+                            numerosissimi andavano ai sui incontri sperando di vederlo perdere.
 
-                <div class="text-with-image">
-                    <img src="images/gibsy2.jpg" alt="gibsy2" id="gibsy2">
-                    <p>
-                        Johann Trollmann è stato uno dei più promettenti pugili della Germania di fine anni ’20,
-                        destinato a
-                        dominare la categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni in cui
-                        Hitler saliva al
-                        potere. Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva l’ostilità
-                        dei
-                        nazisti che
-                        numerosissimi andavano ai sui incontri sperando di vederlo perdere.
-                    </p>
+                        </p>
+                    </div>
+                    <div class="col-sm">
+                        <img src="images/gibsypugnicopia.jpg" alt="gibsypugni" class="image-fluid" id="gibsypugni">
+                    </div>
                 </div>
 
-                <div class="text-with-image">
-                    <img src="images/gibsy4.jpg" alt="giby4" id="gibsy4">
-                    <p>
-                        Avvia il racconto Zirzow, l’allenatore di Gibsy che lo ha seguito per
-                        tutta la carriera da professionista ma, a forza di evocarlo, egli appare sul palco e comincia a
-                        raccontare la sua parte di storia;
-                        si alternano scene a due a racconti individuali, si intrecciano ai balli e canti del campo Rom.
-                        Zirzow va a trovare i parenti di Gibsy
-                        nel giorno in cui si celebra il funerale simbolico del pugile, scomparso in un campo di
-                        concentramento. Tra usanze sinti,racconti, aneddoti
-                        e testimonianze di chi Gibsy lo ha amato, come Olga, scopriremo qual è l’ultima beffa che il
-                        grande
-                        campione ha escogitato, prima del suo declino.
-                    </p>
+                <div class="row">
+                    <div class="col">
+
+                        <img src="images/gibsy3.jpg" alt="gibsy3" class="image-fluid" id="gibsy3">
+
+                    </div>
+                    <div class="col">
+                        <img src="images/gibsypugni2.jpg" alt="gibsypugni2" id="gibsypugni2">
+                    </div>
                 </div>
+
+
+
+                <div class="row">
+                    <div class="col-sm">
+                        <p>
+                            Avvia il racconto Zirzow, l’allenatore di Gibsy che lo ha seguito per
+                            tutta la carriera da professionista ma, a forza di evocarlo, egli appare sul palco e
+                            comincia a
+                            raccontare la sua parte di storia;
+                            si alternano scene a due a racconti individuali, si intrecciano ai balli e canti del
+                            campo
+                            Rom.</p>
+                    </div>
+                    <div class="col-sm">
+                        <img src="images/gibsy4.jpg" alt="gibsy4" class="image-fluid" id="gibsy4">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <img src="images/gibsy6.jpg" class="img-fluid" alt="gibsy6" id="gibsy6">
+                    </div>
+
+                    <div class="col">
+                        <p>
+                            Zirzow va a trovare i parenti di Gibsy
+                            nel giorno in cui si celebra il funerale simbolico del pugile, scomparso in un
+                            campo
+                            di
+                            concentramento. Tra usanze sinti,racconti, aneddoti
+                            e testimonianze di chi Gibsy lo ha amato, come Olga, scopriremo qual è l’ultima
+                            beffa che il
+                            grande
+                            campione ha escogitato, prima del suo declino.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div>
+                        <img src="images/gibsy2.jpg" alt="gibsy2" class="image-fluid" id="gibsy2">
+                    </div>
+                </div>
+
 
 
             </div>
