--- a/views/gibsy.ejs
+++ b/views/gibsy.ejs
@@ -2,22 +2,30 @@
     <%-include("scripts") -%>
         <%-include("navbar") -%>
 
+            <!-- Title -->
             <div class="container-fluid">
 
-                <div class="row">
+                <div class="row title">
 
                     <div class="col-sm">
-                        <div>
-                            <h1><em>Gibsy</em>
-                            </h1>
-                            <h3>
-                                testo e regia di Francesco Mattonai
-                            </h3>
-                        </div>
+
+                        <h1><em>Gibsy</em>
+                        </h1>
+                        <h3>
+                            di Francesco Mattonai
+                        </h3>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+
+
                         <p>
                             Johann Trollmann è stato uno dei più promettenti pugili della Germania di fine anni ’20,
                             destinato a
-                            dominare la categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni in
+                            dominare la categoria dei pesi medio/massimi col soprannome di Gibsy, negli stessi anni
+                            in
                             cui
                             Hitler saliva al
                             potere. Trollmann era uno zingaro Sinti e, più cresceva la sua abilità, più cresceva
@@ -28,10 +36,13 @@
 
                         </p>
                     </div>
+
                     <div class="col-sm">
                         <img src="images/gibsypugnicopia.jpg" alt="gibsypugni" class="image-fluid" id="gibsypugni">
                     </div>
                 </div>
+
+
 
                 <div class="row">
                     <div class="col">
@@ -40,7 +51,8 @@
 
                     </div>
                     <div class="col">
-                        <img src="images/gibsypugni2.jpg" alt="gibsypugni2" id="gibsypugni2">
+
+                        <img src="images/gibsy4.jpg" alt="gibsy4" class="image-fluid" id="gibsy4">
                     </div>
                 </div>
 
@@ -58,7 +70,7 @@
                             Rom.</p>
                     </div>
                     <div class="col-sm">
-                        <img src="images/gibsy4.jpg" alt="gibsy4" class="image-fluid" id="gibsy4">
+                        <img src="images/gibsypugni2.jpg" alt="gibsypugni2" id="gibsypugni2">
                     </div>
                 </div>
 
@@ -84,9 +96,14 @@
                 </div>
 
                 <div class="row">
-                    <div>
-                        <img src="images/gibsy2.jpg" alt="gibsy2" class="image-fluid" id="gibsy2">
+                    <div class="col">
+                        <img src="images/gibsyfarina.jpg" alt="gibsyfarina" class="image-fluid" id="gibsyfarina">
                     </div>
+                    <div class="col">
+                        <img src="images/gibsy2.jpg" alt="gibsy2" class="image-fluid" id="gibsy2">
+
+                    </div>
+
                 </div>
 
 
