--- a/views/gibsy.ejs
+++ b/views/gibsy.ejs
@@ -3,7 +3,7 @@
         <%-include("navbar") -%>
 
             <!-- Title -->
-            <div class="container-fluid">
+            <div class="container-fluid text-box">
 
                 <div class="row title">
 
@@ -45,7 +45,7 @@
 
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm">
 
                         <img src="images/gibsy3.jpg" alt="gibsy3" class="image-fluid" id="gibsy3">
 
@@ -75,11 +75,11 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm">
                         <img src="images/gibsy6.jpg" class="img-fluid" alt="gibsy6" id="gibsy6">
                     </div>
 
-                    <div class="col">
+                    <div class="col-sm">
                         <p>
                             Zirzow va a trovare i parenti di Gibsy
                             nel giorno in cui si celebra il funerale simbolico del pugile, scomparso in un
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm">
                         <img src="images/gibsyfarina.jpg" alt="gibsyfarina" class="image-fluid" id="gibsyfarina">
                     </div>
                     <div class="col">
