--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -37,7 +37,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="gibsy">Gibsy</a>
                         <a class="dropdown-item" href="panediferro">Pane di Ferro</a>
-                        <a class="dropdown-item" href="#">Giovanni VIII</a>
+                        <a class="dropdown-item" href="giovanni">Giovanni VIII</a>
                         <a class="dropdown-item" href="#">Melodie Stonate</a>
                         <a class="dropdown-item" href="#">Il taglio del bosco</a>
                         <a class="dropdown-item" href="#">Archivio</a>
