--- a/views/panediferro.ejs
+++ b/views/panediferro.ejs
@@ -1,7 +1,7 @@
 <%-include("header") -%>
     <%-include("scripts") -%>
         <%-include("navbar") -%>
-            <div class="container">
+            <div class="container-fluid text-box">
                 <h1>Pane di Ferro</h1>
                 <h3>regia di Marco Natalucci</h3>
                 <p>
