--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -23,7 +23,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="about">Storia</a>
-                        <a class="dropdown-item" href="#">Gli attori</a>
+                        <a class="dropdown-item" href="attori">Gli attori</a>
 
                     </div>
                 </li>
