--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -14,7 +14,7 @@
                         <img class="d-block w-100" src="images/Melodie.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/Troiane.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="images/troiane.jpg" alt="Third slide">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="images/Giovanna1.jpg" alt="Fourth slide">
