--- a/views/attori.ejs
+++ b/views/attori.ejs
@@ -1,10 +1,10 @@
 <%-include("header") -%>
     <%-include("scripts") -%>
         <%-include("navbar") -%>
-            <div class="container">
+            <div class="container main-content">
                 <div class="row">
                     <div class="col-sm">
-                        <img src="images/Melodie2.jpg" alt="melodieNicco" id="melodieNicco">
+                        <img src="images/papessa2018.jpg" alt="">
 
                     </div>
                     <div class="col-sm">
