--- a/views/giovanni.ejs
+++ b/views/giovanni.ejs
@@ -10,20 +10,21 @@
                 </h3>
 
                 <img src="images/Giovanna2.jpg" alt="Giovanna2" class="image-center image-fluid">
-                <figure class="text-center">
-                    <blockquote class="blockquote">
-                        <p><em>“Ho una autentica passione per i ritratti. Ritratti di persone che attraverso le loro
-                                scelte
-                                di vita
-                                hanno affermato la propria eroicità. La figura che mi è venuta incontro in questo tempo
-                                è
-                                quella della papessa
-                                Giovanna.”</em></p>
-                    </blockquote>
-                    <figcaption class="blockquote-footer">
-                        Lucia Socci
-                    </figcaption>
-                </figure>
+
+
+                <p style="text-align: center;"><em>“Ho una autentica passione per i ritratti. Ritratti di persone che
+                        attraverso le loro
+                        scelte
+                        di vita
+                        hanno affermato la propria eroicità. La figura che mi è venuta incontro in questo tempo
+                        è
+                        quella della papessa
+                        Giovanna.”</em></p>
+
+                <figcaption class="blockquote-footer">
+                    Lucia Socci
+                </figcaption>
+
 
 
             </div>
@@ -31,7 +32,7 @@
 
             <!-- First row -->
 
-            <div class="container">
+            <div class="container main-content">
                 <div class="row">
                     <div class="col-sm">
                         <img src="images/GiovannaElodie.jpg" alt="">
@@ -53,10 +54,10 @@
                     </div>
 
                 </div>
-            </div>
 
-            <!-- Second row -->
-            <div class="container">
+
+                <!-- Second row -->
+
                 <div class="row">
                     <div class="col-sm">
                         <p>
@@ -75,16 +76,17 @@
                     </div>
 
                 </div>
-            </div>
 
-            <!-- Third row -->
-            <div class="container">
+
+                <!-- Third row -->
+
                 <div class="row">
                     <div class="col-sm">
                         <img src="images/Giovannaporta.jpg" alt="Giovannaporta" id="Giovannaporta">
                     </div>
                     <div class="col-sm">
-                        <p>È interessante il materiale, la figura di Giovanna e il contesto storico: il ritratto e lo
+                        <p>È interessante il materiale, la figura di Giovanna e il contesto
+                            storico: il ritratto e lo
                             sfondo.
 
                             Giovanna è infatti costretta a travestirsi da uomo per poter far fronte alla sua sete di
@@ -100,5 +102,4 @@
 
                 </div>
             </div>
-
             <%-include("footer") -%>
