--- a/views/carousel.ejs
+++ b/views/carousel.ejs
@@ -4,7 +4,7 @@
     <%-include("scripts") -%>
         <%-include("navbar") -%>
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="images/gibsyMirko.jpg" alt="First slide">
@@ -14,7 +14,7 @@
                         <img class="d-block w-100" src="images/Melodie.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/troiane.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="images/panediferro.jpg" alt="Third slide">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="images/Giovanna1.jpg" alt="Fourth slide">
