--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -1,61 +1,98 @@
 <!-- Gallery -->
 <%-include("header") -%>
-    <%-include("scripts") -%>
-        <%-include("navbar") -%>
-            <div class="container-fluid">
+
+    <%-include("navbar") -%>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+
+                    <img src="images/LascaLorenzo.jpg" class=" gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="gallery item" id="lasca" />
+
+
+                    <img src="images/MelodiePatrizia.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="" />
+                    <img src="images/gibsyNicco.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                </div>
+
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <img src="images/papessa2018.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+                    <img src="images/troiane.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="" />
+
+                    <img src="images/GiovannaElodie.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="" />
+                </div>
+
+                <div class="col-lg-4 mb-4 mb-lg-0">
+                    <img src="images/Gibsy sgabello.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="" />
+                    <img src="images/TignanoSandro.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="" />
+
+                    <img src="images/MelodiePaola.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4" alt="">
+                    <img src="images/panediferroMarlene.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        alt="" />
+                </div>
+
+
                 <div class="row">
                     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                        <img src="images/LascaLorenzo.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <img src="images/panediferroSimone.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
 
-                        <img src="images/MelodiePatrizia.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                        <img src="images/gibsyNicco.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <img src="images/libertàScarpe.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+                        <img src="images/ShakeYasmine.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+                        <img src="images/MelodieInchino.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+                    </div>
+
+
+                    <div class="col-lg-4 mb-4 mb-lg-0">
+                        <img src="images/libertàLinda.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+                        <img src="images/LascaLety.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+                        <img src="images/panediferro.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
+
                     </div>
 
                     <div class="col-lg-4 mb-4 mb-lg-0">
-                        <img src="images/papessa2018.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                        <img src="images/troiane.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+                        <img src="images/libertàMacchina.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
 
-                        <img src="images/GiovannaElodie.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
+
+                        <img src="images/libertàRiccardo.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="">
+                        <img src="images/panediferroBurba.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                            alt="" />
                     </div>
 
-                    <div class="col-lg-4 mb-4 mb-lg-0">
-                        <img src="images/Gibsy sgabello.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                        <img src="images/TignanoSandro.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                        <img src="images/MelodiePaola.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="">
-                        <img src="images/panediferroMarlene.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                    </div>
-
-
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                            <img src="images/panediferroSimone.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                            <img src="images/libertàScarpe.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                            <img src="images/ShakeYasmine.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                            <img src="images/MelodieInchino.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                        </div>
-
-
-                        <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="images/libertàLinda.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                            <img src="images/LascaLety.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                            <img src="images/panediferro.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-                        </div>
-
-                        <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="images/libertàMacchina.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-
-
-                            <img src="images/libertàRiccardo.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="">
-                            <img src="images/panediferroBurba.jpg" class="w-100 shadow-1-strong rounded mb-4" alt="" />
-                        </div>
-
-
-                    </div>
 
                 </div>
 
-                <%-include("footer") -%>
-                    <!-- Gallery -->
+            </div>
+
+            <!-- Modal body -->
+            <section>
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-img" alt="modal img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+            <%-include("footer") -%>
+                <!-- Gallery -->
