--- a/views/attori.ejs
+++ b/views/attori.ejs
@@ -1,78 +1,110 @@
 <%-include("header") -%>
-    <%-include("scripts") -%>
-        <%-include("navbar") -%>
-            <div class="container main-content">
-                <div class="row">
-                    <div class="col-sm">
-                        <img src="images/papessa2018.jpg" alt="papessa">
 
-                    </div>
-                    <div class="col-sm">
-                        <h2>
-                            Alessandra Niccolini
-                        </h2>
-                        <p>
-                            Inizia con la Lega Italiana Improvvisazione Teatrale (LIIT) nel 1996, diretta da Giovanni
-                            Palanza e Marco Venienti, e
-                            consolida la sua esperienza frequentando il corso professionale del progetto Plexus Solaris
-                            guidato da Angelo Savelli,
-                            Giancarlo Nanni, Emanuela Kustermann ed altri professionisti. Attraverso workshop mirati,
-                            non ha mai smesso di studiare
-                            con Roberto Panici, Michele Di Mauro, Alfonso Santagata, Caludio Morganti… ed ha preso parte
-                            a produzioni di Riccardo
-                            Massai, Ugo Chiti, Marco Natalucci, Massimo Salvianti continuando fino ad oggi la
-                            collaborazione con Arca Azzurra e
-                            Compagnia Archetipo, oltre agli spettacoli di Teatro delle Stanze.
-                        </p>
+    <%-include("navbar") -%>
 
-                    </div>
+
+        <div class="container-fluid">
+
+
+
+            <div class="card" style="width: 18rem;">
+                <img src="images/Atteone2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2>Alessandra Niccolini</h2>
+                    <p class="card-text">Inizia con la Lega Italiana Improvvisazione Teatrale (LIIT) nel 1996, diretta
+                        da Giovanni
+                        Palanza e Marco Venienti, e
+                        consolida la sua esperienza frequentando il corso professionale del progetto Plexus Solaris
+                        guidato da Angelo Savelli,
+                        Giancarlo Nanni, Emanuela Kustermann ed altri professionisti. Attraverso workshop mirati,
+                        non ha mai smesso di studiare
+                        con Roberto Panici, Michele Di Mauro, Alfonso Santagata, Caludio Morganti… ed ha preso parte
+                        a produzioni di Riccardo
+                        Massai, Ugo Chiti, Marco Natalucci, Massimo Salvianti continuando fino ad oggi la
+                        collaborazione con Arca Azzurra e
+                        Compagnia Archetipo, oltre agli spettacoli di Teatro delle Stanze.</p>
                 </div>
-                <div class="row">
-                    <div class=" col-sm">
-                        <img src="images/MirkoCV.jpg" alt="MirkoCV">
+            </div>
+        </div>
 
-                    </div>
-                    <div class="col-sm">
-                        <h2>
-                            Mirko Batoni
-                        </h2>
-                        <p>
-                            Inizia presso la LIIT - Lega Italiana Improvvisazione Teatrale nel 1997, e poi con il con
-                            TeatrO2 di Siena si focalizza
-                            sul metodo Stanislavskij. Dall' inizio degli anni 2000 lavora in televisione e cinema. Ha
-                            preso parte in pianta stabile
-                            alle produzioni Teatro delle Stanze, da ciò nascono legami forti, soprattutto con Arca
-                            Azzurra con cui collabora più
-                            volte. Oltre che con Ugo Chiti, lavora con Maurizio Panici, Giuliano Scabia, Riccardo
-                            Massai, Claudio Morganti, Michele
-                            Di Mauro e Giovanni Guidelli.
-                        </p>
 
-                    </div>
+
+
+
+
+
+        <!-- <div class="container main-content">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="images/papessa2018.jpg" alt="papessa">
 
                 </div>
-                <div class="row">
-                    <div class="col-sm">
-                        <h2>
-                            Diego Conforti
-                        </h2>
-                        <p>
-                            Nel 1994 inizia con i corsi di Patrizia Corti e Andrè Casaca, successivamente collabora con
-                            Giallo Mare minimal teatro
-                            anche come formatore, al quale ha unito un percorso riconosciuto dal ministero
-                            dell’Istruzione MIUR quale Operatore per
-                            teatro ragazzi. Oltre che collaborare stabilmente col Teatro del Popolo di Castelfiorentino,
-                            ha lavorato anche in
-                            produzioni di Angelo e Andrea Savelli e Giovanni Guidelli.
-                             
-                        </p>
-                    </div>
-                    <div class="col-sm">
-                        <img src="images/DiegoCV.jpg" alt="DiegoCV">
-                    </div>
+                <div class="col-sm">
+                    <h2>
+                        Alessandra Niccolini
+                    </h2>
+                    <p>
+                        Inizia con la Lega Italiana Improvvisazione Teatrale (LIIT) nel 1996, diretta da Giovanni
+                        Palanza e Marco Venienti, e
+                        consolida la sua esperienza frequentando il corso professionale del progetto Plexus Solaris
+                        guidato da Angelo Savelli,
+                        Giancarlo Nanni, Emanuela Kustermann ed altri professionisti. Attraverso workshop mirati,
+                        non ha mai smesso di studiare
+                        con Roberto Panici, Michele Di Mauro, Alfonso Santagata, Caludio Morganti… ed ha preso parte
+                        a produzioni di Riccardo
+                        Massai, Ugo Chiti, Marco Natalucci, Massimo Salvianti continuando fino ad oggi la
+                        collaborazione con Arca Azzurra e
+                        Compagnia Archetipo, oltre agli spettacoli di Teatro delle Stanze.
+                    </p>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class=" col-sm">
+                    <img src="images/MirkoCV.jpg" alt="MirkoCV">
+
+                </div>
+                <div class="col-sm">
+                    <h2>
+                        Mirko Batoni
+                    </h2>
+                    <p>
+                        Inizia presso la LIIT - Lega Italiana Improvvisazione Teatrale nel 1997, e poi con il con
+                        TeatrO2 di Siena si focalizza
+                        sul metodo Stanislavskij. Dall' inizio degli anni 2000 lavora in televisione e cinema. Ha
+                        preso parte in pianta stabile
+                        alle produzioni Teatro delle Stanze, da ciò nascono legami forti, soprattutto con Arca
+                        Azzurra con cui collabora più
+                        volte. Oltre che con Ugo Chiti, lavora con Maurizio Panici, Giuliano Scabia, Riccardo
+                        Massai, Claudio Morganti, Michele
+                        Di Mauro e Giovanni Guidelli.
+                    </p>
+
                 </div>
 
             </div>
-
+            <div class="row">
+                <div class="col-sm">
+                    <h2>
+                        Diego Conforti
+                    </h2>
+                    <p>
+                        Nel 1994 inizia con i corsi di Patrizia Corti e Andrè Casaca, successivamente collabora con
+                        Giallo Mare minimal teatro
+                        anche come formatore, al quale ha unito un percorso riconosciuto dal ministero
+                        dell’Istruzione MIUR quale Operatore per
+                        teatro ragazzi. Oltre che collaborare stabilmente col Teatro del Popolo di Castelfiorentino,
+                        ha lavorato anche in
+                        produzioni di Angelo e Andrea Savelli e Giovanni Guidelli.
+                         
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <img src="images/DiegoCV.jpg" alt="DiegoCV">
+                </div>
             </div>
-            <%-include("footer") -%>
+
+        </div>
+
+        </div> -->
+        <%-include("footer") -%>
