--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -93,6 +93,6 @@
                 </div>
 
             </section>
-
-            <%-include("footer") -%>
-                <!-- Gallery -->
+        </div>
+        <%-include("footer") -%>
+            <!-- Gallery -->
