--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,7 +23,8 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Open+Sans:ital,wght@0,300;0,400;1,300&family=Raleway:wght@100;200&display=swap"
         rel="stylesheet">
 
     <!-- Font Awesome Scripts -->
