--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,11 @@
-<footer class="fixed-bottom" id="footer">
+</div>
+<footer id="footer">
     <div class="copyright">© Teatro delle Stanze</div>
     <i class="icon fab fa-facebook-f"></i> <i class="icon fab fa-instagram"></i>
     <i class="icon fas fa-envelope"></i>
 </footer>
-</div>
+
+
 
 
 <!-- Bootstrap Scripts -->
