--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- Title Section -->
-<div class="container-fluid">
+<div class="container-fluid navigation-bar">
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -40,7 +40,7 @@
                         <a class="dropdown-item" href="giovanni">Giovanni VIII</a>
                         <a class="dropdown-item" href="melodiestonate">Melodie Stonate</a>
                         <a class="dropdown-item" href="tagliodelbosco">Il taglio del bosco</a>
-                        <a class="dropdown-item" href="#">Archivio</a>
+                        <a class="dropdown-item" href="archivio">Archivio</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
