--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <%-include("header") -%>
     <%-include("navbar") -%>
         <div class="container-fluid">
+            <img class="image-center image-fluid" src="images/panediferroVagone2.jpg" alt="panediferro">
             <p id="aboutus">Il Teatro delle Stanze si costituisce associazione il 28.01.2008, a Poggibonsi (Siena), con
                 l’obiettivo di
                 creare
