--- a/views/archivio.ejs
+++ b/views/archivio.ejs
@@ -8,89 +8,104 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card">
                                 <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
+
+
+
+                                <div class="card-body">
+                                    <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta
+                                        della
+                                        guerra e dei suoi orrori.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card">
+                                <img src="images/castigarlaLocandina.jpg" class="card-img-top" alt="...">
+
+
+
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Castigarla Spero</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div class="card">
+                                <img src="images/lascalocandina.jpg" class="card-img-top" alt="...">
 
                             </div>
 
                             <div class="card-body">
                                 <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
                                     guerra e dei suoi orrori.</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <div class="card">
+                                <img src="images/panediferroLocandina1.jpg" class="card-img-top" alt="...">
+
+                            </div>
+
+                            <div class="card-body">
+                                <p class="card-text">Pane di Ferro</p>
 
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/panediferroLocandina2.jpg" class="card-img-top" alt="...">
 
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
+                                <p class="card-text">Pane di Ferro</p>
 
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/MelodieLocandina.jpg" class="card-img-top" alt="...">
 
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
-
-                            </div>
-
-                            <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
+                                <p class="card-text">Pane di Ferro</p>
 
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
+                            <div class="card">
+                                <img src="images/tagliodelboscoLocandina.jpg" class="card-img-top" alt="...">
 
                             </div>
 
                             <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
+                                <p class="card-text">Pane di Ferro</p>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/troianeLocandina.jpg" class="card-img-top" alt="...">
 
-                            </div>
 
-                            <div class="card-body">
-                                <p class="card-text">Tratto dalle "Troiane" di Euripide, uno spettacolo che tratta della
-                                    guerra e dei suoi orrori.</p>
-
-                            </div>
-                        </div>
-                    </div>
 
 
                 </div>
