--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -55,7 +55,7 @@
                             alt="" />
                         <img src="images/LascaLety.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
                             alt="" />
-                        <img src="images/panediferro.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
+                        <img src="images/DiegoGibsy.jpg" class="gallery-item w-100 shadow-1-strong rounded mb-4"
                             alt="" />
 
                     </div>
