--- a/views/attori.ejs
+++ b/views/attori.ejs
@@ -7,7 +7,7 @@
 
 
 
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="images/Atteone2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Alessandra Niccolini</h2>
